# ticker-watch

./: .gitignore  README.md  pyproject.toml  spec.md
docs/: demo_cache.py  record_demo.sh  ticker-watch-tmux.tape
docs/plans/: 2026-07-08-ticker-watch-design.md  2026-07-08-ticker-watch.md
src/ticker_watch/: __init__.py  app.py  cache.py  cli.py  config.py  daemon.py  models.py  render.py  yahoo_provider.py
tests/: test_cache.py  test_cli_config_commands.py  test_cli_runtime_commands.py  test_config.py  test_daemon.py  test_render_status.py  test_static_safety.py  test_yahoo_provider_mapping.py
