[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ticker-watch"
version = "0.1.0"
description = "Simple Yahoo Finance terminal quote monitor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pydantic>=2",
  "pyyaml>=6",
  "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
ticker-watch = "ticker_watch.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
